fix minor styling misalignment

--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -9,4 +9,5 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    line-height: 1em;
 }
